# poker-hu-bot

./: CMakeLists.txt  README.md  pyproject.toml
cpp/pokerbot/core/: c_api.cpp  c_api.h  cards.h  hand_evaluator.cpp  hand_evaluator.h  limit_holdem_game.cpp  limit_holdem_game.h
pokerbot/: __init__.py
pokerbot/core/: __init__.py  cards.py  limit_holdem.py  native.py
scripts/: build_core.sh  play_limit_hand.py
tests/unit/: test_limit_holdem_state.py
