[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-hu-bot"
version = "0.1.0"
description = "Heads-up limit holdem bot with CFR core"
requires-python = ">=3.10"
readme = "README.md"
authors = [
  { name = "Austeleus" }
]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pokerbot*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
